<resources>
    <string name="app_name">PlantParenthood</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--austen strings -->
    <string name="qrcode_generator_label">QR Code Generator</string>
    <string name="qrcode_scanner_label">QR Code Scanner</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="print_qr_code">Print QR Code</string>
    <string name="qrcode_image">QRCode image</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="channel_name">Notification</string>
    <string name="channel_description">Placeholder Desc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_name">Search For Plant:</string>
    <string name="error_text"></string>

    <string name ="Group_Name"></string>
    resources>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>


    <string name="cycle">Cycle Drop Down Menu</string>
    <string-array name="Cycles">
        <item>perennial</item>
        <item>annual</item>
        <item>biennial</item>
        <item>biannual</item>
    </string-array>

    <string name="water_type">Watering Drop Down Menu</string>
    <string-array name="wateringType">
        <item>frequent</item>
        <item>average</item>
        <item>minimum</item>
        <item>none</item>
    </string-array>

    <string name="sunlight">Sunlight Drop Down Menu</string>
    <string name="mean_time_between_watering">Mean Time Between Watering:</string>
    <string name="share_it">Share It!</string>
    <string-array name="sunlight">
        <item>full_shade</item>
        <item>part_shade</item>
        <item>sun_part_shade</item>
        <item>full_sun</item>
    </string-array>

</resources>