<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.plantparenthood.AustenFirstFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_austen_mainmenu">

        <action
            android:id="@+id/action_FirstFragment_to_QRCodeGenerator"
            app:destination="@id/QRCodeGenerator"
            app:popUpTo="@id/QRCodeGenerator" />
        <action
            android:id="@+id/action_FirstFragment_to_QrScanner"
            app:destination="@id/QRCodeScanner"
            app:popUpTo="@id/QRCodeScanner" />
    </fragment>
    <fragment
        android:id="@+id/QRCodeGenerator"
        android:name="com.example.plantparenthood.QRCodeGeneratorActivity"
        android:label="@string/qrcode_generator_label"
        tools:layout="@layout/activity_qr_code_generator">

        <action
            android:id="@+id/action_QRCodeGenerator_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/QRCodeScanner"
        android:name="com.example.plantparenthood.QrCodeScannerFragment"
        android:label="@string/qrcode_scanner_label"
        tools:layout="@layout/fragment_qr_code_scanner">

    </fragment>
</navigation>