<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QrCodeGenerator">

    <ImageView
        android:id="@+id/qrcode_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/qrcode_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/debug_plantIDEntry"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/qrcode_generate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrcode_image"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/qrcode_generate_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="88dp"
        android:text="@string/generate_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/qrcode_print_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="88dp"
        android:text="@string/print_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toEndOf="@+id/qrcode_generate_button" />

    <TextView
        android:id="@+id/debug_plantIDprompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Plant ID:"
        app:layout_constraintBottom_toTopOf="@+id/debug_plantIDEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrcode_image"
        app:layout_constraintVertical_bias="0.488" />
</androidx.constraintlayout.widget.ConstraintLayout>